--- a/src/app/components/add-contact-btn/add-contact-btn.component.html
+++ b/src/app/components/add-contact-btn/add-contact-btn.component.html
@@ -1,1 +1,32 @@
-<p>add-contact-btn works!</p>
+<button class="btn btn-primary" (click)="openModal()"><i class="fa fa-plus"></i> Crear contacto</button>
+
+
+<!-- Modal -->
+<div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Crear contacto</h5>
+        <button type="button" class="close" (click)="closeModal()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <div class="form-group">
+          <label for="">Nombre</label>
+          <input type="text" name="name" [formControl]="name" class="form-control" maxlength="25">
+        </div>
+        <div class="form-group">
+          <label for="">Teléfono</label>
+          <input type="text" name="phone" [formControl]="phone" class="form-control" maxlength="15">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="closeModal()">Cerrar</button>
+        <button type="button" class="btn btn-primary" (click)="save()">Guardar</button>
+      </div>
+    </div>
+  </div>
+</div>
