--- a/src/app/components/contacts-list/contacts-list.component.html
+++ b/src/app/components/contacts-list/contacts-list.component.html
@@ -1,1 +1,19 @@
-<p>contacts-list works!</p>
+<ul class="list-group mt-3">
+  <li class="list-group-item" *ngFor="let contact of contacts">
+    <div class="row">
+      <div class="col-sm-10">
+        <h4>{{ contact.name }}</h4>
+      </div>
+      <div class="col-sm-2">
+        <button class="btn btn-warning btn-sm"><i class="fa fa-edit"></i> Editar</button>
+      </div>
+    </div>
+    <hr>
+    <h5>Telefonos <button class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></button></h5>
+    <span *ngFor="let phone of contact.phones; index as i" class="badge badge-info p-2">
+      {{ contact.phones[i] }}&nbsp;
+      <a href="" class="text-warning"><i class="fa fa-edit"></i></a>&nbsp;&nbsp;
+      <a href="" class="text-danger"><i class="fa fa-trash"></i></a>
+    </span>
+  </li>
+</ul>
