--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,5 @@
     </div>
   </div>
 
-  <contacts-list [contacts]="contacts" (contactUpdated)="refresh()"></contacts-list>
+  <contacts-list [contacts]="contacts" (contactAffected)="refresh()"></contacts-list>
 </div>
