--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <add-contact-btn (newContactAdded)="refresh()"></add-contact-btn>
     </div>
     <div class="col-sm-6 text-right">
-      <import-contacts-btn></import-contacts-btn>
+      <import-contacts-btn (contactsImported)="refresh()"></import-contacts-btn>
     </div>
   </div>
 
