--- a/src/app/components/add-contact-btn/add-contact-btn.component.html
+++ b/src/app/components/add-contact-btn/add-contact-btn.component.html
@@ -17,10 +17,13 @@
         <div class="form-group">
           <label for="">Nombre</label>
           <input type="text" name="name" [formControl]="name" class="form-control" maxlength="25">
+          <div *ngIf="name.touched && !name.valid" class="alert alert-danger">El nombre es requerido</div>
         </div>
         <div class="form-group">
           <label for="">Teléfono</label>
           <input type="text" name="phone" [formControl]="phone" class="form-control" maxlength="15">
+          <div *ngIf="phone.touched && !phone.valid" class="alert alert-danger">Teléfono invalido, solo
+            números</div>
         </div>
       </div>
       <div class="modal-footer">
