--- a/src/app/components/add-contact-btn/add-contact-btn.component.html
+++ b/src/app/components/add-contact-btn/add-contact-btn.component.html
@@ -17,7 +17,8 @@
         <div class="form-group">
           <label for="">Nombre</label>
           <input type="text" name="name" [formControl]="name" class="form-control" maxlength="25">
-          <div *ngIf="name.touched && !name.valid" class="alert alert-danger">El nombre es requerido</div>
+          <div *ngIf="name.touched && !name.valid" class="alert alert-danger">
+            {{ name.errors?.error || 'El nombre es requerido' }}</div>
         </div>
         <div class="form-group">
           <label for="">Teléfono</label>
